Small updates & a fix for Bug #43832 mysqi_get_charset() doesn't expose charset comment